working gha deploy

--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,6 @@
 # Sample environment file
 AWS_PROFILE=__CHANGE_ME__
+KUBE_CONFIG_PATH=/etc/rancher/k3s/k3s.yaml
 #
 # Terraform variables
 TF_VAR_aws_prefix=__CHANGE_ME__
