--- a/.env.sample
+++ b/.env.sample
@@ -1,4 +1,7 @@
 # Sample environment file
+# Comma seperated list of repositories to create runners for
+REPOSITORIES=octo-cat/repo
+#
 AWS_PROFILE=__CHANGE_ME__
 KUBE_CONFIG_PATH=/etc/rancher/k3s/k3s.yaml
 #
