--- a/.env.sample
+++ b/.env.sample
@@ -1,10 +1,15 @@
-# Sample environment file
-# Comma seperated list of repositories to create runners for
-REPOSITORIES=octo-cat/repo
+# Sample environment file. Commented out lines are optional
 #
-AWS_PROFILE=__CHANGE_ME__
+# REPOSITORIES is a comma seperated list of repositories to create runners for
+REPOSITORIES=__CHANGE_ME__
+#
+# Terraform variables for gha-runners deployment
+# TF_VAR_gh_pat_token=__CHANGE_ME__
+#
+# Terraform variables for ec2-k3s deployment
+# TF_VAR_aws_prefix=__CHANGE_ME__
+# TF_VAR_aws_region=eu-west-2
+#
+# Other top level environment variables
+# AWS_PROFILE=__CHANGE_ME__
 KUBE_CONFIG_PATH=/etc/rancher/k3s/k3s.yaml
-#
-# Terraform variables
-TF_VAR_aws_prefix=__CHANGE_ME__
-TF_VAR_aws_region=eu-west-2
