--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -12,8 +12,14 @@ repos:
       - id: terraform_fmt
 
   - repo: https://github.com/terraform-docs/terraform-docs
-    rev: "v0.16.0"
+    rev: v0.16.0
     hooks:
       - id: terraform-docs-go
         args: [".", "-c", ".terraform.docs.yml"]
         pass_filenames: false
+
+  - repo: https://github.com/igorshubovych/markdownlint-cli
+    rev: v0.35.0
+    hooks:
+      - id: markdownlint-fix-docker
+        args: ["--disable", "MD013,MD033"]
